# synthesis-dark-marco-theme

./: .SRCINFO  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  PKGBUILD  PROJECT_SUMMARY.md  README.md  RESEARCH.md  SECURITY.md  TECHNICAL_DEBT.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
Synthesis-Dark-Marco/: index.theme
Synthesis-Dark-Marco/Kvantum/: meson.build
Synthesis-Dark-Marco/Kvantum/SynthesisDark/: SynthesisDark.kvconfig
Synthesis-Dark-Marco/gtk-2.0/: gtkrc  meson.build
Synthesis-Dark-Marco/gtk-3.0/: gtk.css  meson.build
Synthesis-Dark-Marco/metacity-1/: meson.build  metacity-theme-3.xml
